--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          Let's see what you know! Here are some code-related questions. Answer them all as quickly as you can and try to get the HIGH SCORE, but note that incorrect answers will result in a 10 second score/time penalty. Don't worry, you can try as many times as you want!
+          How much do you really know about coding? Here are some code-related questions to help answer that. Answer them all as quickly as you can and try to acheive for the best HIGH SCORE! Note though that incorrect answers will result in a 10 second score/time penalty. Don't worry though, as you may try as many times as you wish!
         </p>
         <button id="start">Start Quiz</button>
       </div>
