--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="scores"><a href="score.html">View Highscores</a></div>
+    <div class="scores"><a href="scores.html">View Highscores</a></div>
 
     <div class="timer">Time: <span id="time">0</span></div>
 
